[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["query", "form"] }
tower-http = { version = "0.4.3", features = ["cors"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
tokio = { workspace = true }
common = { workspace = true }
